🐛  add 2 more minutes

--- a/configurations/01 - Ballet dancer v1.yaml
+++ b/configurations/01 - Ballet dancer v1.yaml
@@ -43,9 +43,21 @@ prompts:
     - a ballet dancer girl dancing in apocalyptic modern city ruins with skyscrapers
     - fire in apocalyptic modern city ruins with skyscrapers
     - a ballet dancer girl dancing with a fire in apocalyptic modern city ruins with skyscrapers
-    - huge crowd chasing a ballet dancer girl in apocalyptic modern city ruins with skyscrapers
+    - an army of duck dressed as ballet dancer in a modern city with skyscrapers
     # 2:00
-    - huge crowd chasing a ballet dancer girl in apocalyptic modern city ruins with skyscrapers
+    - a ballet dancer girl surrounded by an army of duck dressed as ballet dancer in a modern city with skyscrapers
+    - a ballet dancer girl flying with an army of duck dressed as ballet dancer between skyscrapers
+    - a ballet dancer girl and a duck falling in love in a modern city
+    - a duck flying away from a ballet dancer girl in a modern city with skyscrapers
+    - a ballet dancer crying on the floor
+    - a ballet dancer turning into a duck in the middle of the street
+    # 3:00
+    - a ballet dancer duck dancing in a modern city with skyscrapers
+    - people gathering watching a ballet dancer duck dancing in a modern city with skyscrapers
+    - a couple of ballet dancer duck dancing together in a modern city with skyscrapers
+    - an army of angry ballet duck destroying a modern city with skyscrapers
+    - a ballet dancer girl watching duck on television in a castle
+    - a ballet dancer girl dancing in her castle
   seeds:
     - 6871596188
     - 7042399203
@@ -73,6 +85,18 @@ prompts:
     - 4246302026
     - 255159525
     - 989365904
-    - 2901379816
+    - 1310745164
     # 2:00
-    - 2901379816
+    - 2441066560
+    - 1739680831
+    - 5147392344
+    - 6134516715
+    - 3289540872
+    - 3337964182
+    # 3:00
+    - 6049361016
+    - 7009402533
+    - 5375219629
+    - 5626090476
+    - 3719506224
+    - 4711424131
